Fix integration message outputs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # TODO(Guss): options to enable opt-in based macro defines
 
 if (${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
-  message(FATAL_ERROR "[${CMAKE_PROJECT_NAME}] : In-source build not recommended")
+  message(FATAL_ERROR "[${CMAKE_NAME}] : In-source build not recommended")
 endif()
 
 ## Components
@@ -33,11 +33,11 @@ set(CSL_COMPONENT_LIST
 option(CSL_BUILD_ALL "Build all csl components" ON) # force all components build
 unset(CSL_ENABLED_COMPONENTS_LIST)
 unset(CSL_DISABLED_COMPONENTS_LIST)
-message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_BUILD_ALL set to ${CSL_BUILD_ALL}")
+message(VERBOSE "[${CMAKE_NAME}] CSL_BUILD_ALL set to ${CSL_BUILD_ALL}")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
 foreach(component_name IN LISTS CSL_COMPONENT_LIST)
     option(CSL_BUILD_${component_name} "Build all csl components" ${CSL_BUILD_ALL})
-    message(VERBOSE "[${CMAKE_PROJECT_NAME}]: [CSL_BUILD_${component_name}] CSL_BUILD_ALL set to ${CSL_BUILD_${component_name}}")
+    message(VERBOSE "[${CMAKE_NAME}]: [CSL_BUILD_${component_name}] CSL_BUILD_ALL set to ${CSL_BUILD_${component_name}}")
     if (${CSL_BUILD_${component_name}})
         list(APPEND CSL_ENABLED_COMPONENTS_LIST ${component_name})
     endif()
@@ -49,39 +49,39 @@ set(CSL_DISABLED_COMPONENTS_LIST ${CSL_COMPONENT_LIST})
 list(REMOVE_ITEM CSL_DISABLED_COMPONENTS_LIST ${CSL_ENABLED_COMPONENTS_LIST})
 
 #### enabled
-message(STATUS "[${CMAKE_PROJECT_NAME}] enabled components:")
+message(STATUS "[${CMAKE_NAME}] enabled components:")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
 if (NOT CSL_ENABLED_COMPONENTS_LIST)
     message(STATUS "(none)")
 endif()
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    message(STATUS "${CMAKE_PROJECT_NAME}::${component_name}")
+    message(STATUS "${CMAKE_NAME}::${component_name}")
 endforeach()
 list(POP_BACK CMAKE_MESSAGE_INDENT)
 
 #### disabled
-message(STATUS "[${CMAKE_PROJECT_NAME}] disabled components:")
+message(STATUS "[${CMAKE_NAME}] disabled components:")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
 if (NOT CSL_DISABLED_COMPONENTS_LIST)
     message(STATUS "(none)")
 endif()
 foreach(component_name IN LISTS CSL_DISABLED_COMPONENTS_LIST)
-    message(STATUS "${CMAKE_PROJECT_NAME}::${component_name}")
+    message(STATUS "${CMAKE_NAME}::${component_name}")
 endforeach()
 list(POP_BACK CMAKE_MESSAGE_INDENT)
 
 ### Components - tests
 option(CSL_ENABLE_ALL_TESTS "Build all tests for csl" OFF) # force all tests
-message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_ENABLE_ALL_TESTS set to ${CSL_ENABLE_ALL_TESTS} ...")
+message(VERBOSE "[${CMAKE_NAME}] CSL_ENABLE_ALL_TESTS set to ${CSL_ENABLE_ALL_TESTS} ...")
 
 ### Components - examples 
 option(CSL_ENABLE_ALL_EXAMPLES "Build all examples for csl" OFF) # force all examples
-message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_ENABLE_ALL_EXAMPLES set to ${CSL_ENABLE_ALL_EXAMPLES} ...")
+message(VERBOSE "[${CMAKE_NAME}] CSL_ENABLE_ALL_EXAMPLES set to ${CSL_ENABLE_ALL_EXAMPLES} ...")
 
 ### Opt-ins: Tests, Examples
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    option(CSL_TEST_${component_name}    "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)"   ${CSL_ENABLE_ALL_TESTS})
-    option(CSL_EXAMPLE_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
+    option(CSL_TEST_${component_name}    "[${CMAKE_NAME}] csl::${component_name} (tests)"   ${CSL_ENABLE_ALL_TESTS})
+    option(CSL_EXAMPLE_${component_name} "[${CMAKE_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
 endforeach()
 
 # list(LENGTH CSL_ENABLED_TESTS_LIST CSL_ENABLED_TESTS_LIST_length)
@@ -103,7 +103,7 @@ endforeach()
 
 ### Components libraries - csl_lib::<name>
 function(csl_create_component component_name)
-    message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name}")
+    message(STATUS "[${CMAKE_NAME}] csl::${component_name}")
 
     # add the component
     add_library(csl_${component_name}_lib INTERFACE)
@@ -111,7 +111,7 @@ function(csl_create_component component_name)
     # check if component has a custom cmake pre-build/configuration to inject
     set(maybe_component_custom_cmake_path "${PROJECT_SOURCE_DIR}/cmake/${component_name}.cmake")
     if (EXISTS "${maybe_component_custom_cmake_path}")
-        message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} : custom cmake rules detected ...")
+        message(STATUS "[${CMAKE_NAME}] csl::${component_name} : custom cmake rules detected ...")
         list(APPEND CMAKE_MESSAGE_INDENT "  ")
         include("${maybe_component_custom_cmake_path}")
         list(POP_BACK CMAKE_MESSAGE_INDENT)
@@ -121,19 +121,19 @@ function(csl_create_component component_name)
     )
 
     # test
-    option(CSL_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)" ${CSL_ENABLE_ALL_TESTS})
+    option(CSL_TEST_${component_name} "[${CMAKE_NAME}] csl::${component_name} (tests)" ${CSL_ENABLE_ALL_TESTS})
     if (CSL_TEST_${component_name})
-        message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)")
+        message(STATUS "[${CMAKE_NAME}] csl::${component_name} (tests)")
         add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
     endif()
 
     # example
-    option(CSL_EXAMPLE_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
+    option(CSL_EXAMPLE_${component_name} "[${CMAKE_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
     if (CSL_EXAMPLE_${component_name})
         if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
-            # message(AUTHOR_WARNING "[${CMAKE_PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
+            # message(AUTHOR_WARNING "[${CMAKE_NAME}] : csl::${component_name} has no examples available, skipping ...")
         else()
-            message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)")
+            message(STATUS "[${CMAKE_NAME}] csl::${component_name} (example)")
             add_subdirectory(${PROJECT_SOURCE_DIR}/examples/${component_name})
         endif()
     endif()
@@ -141,7 +141,7 @@ function(csl_create_component component_name)
 endfunction()
 
 message(STATUS "")
-message(STATUS "[${CMAKE_PROJECT_NAME}] csl_lib ...")
+message(STATUS "[${CMAKE_NAME}] csl_lib ...")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
 add_library(csl_lib INTERFACE)
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
