--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -4,7 +4,11 @@ set(component_name ag)
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
-target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
+target_include_directories(${test_name}
+	PRIVATE
+		# ${CMAKE_SOURCE_DIR}/tests/details/
+		${CMAKE_CURRENT_SOURCE_DIR}/includes
+)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
 target_link_libraries(${test_name}
 	PRIVATE
@@ -17,10 +21,15 @@ add_test(
 )
 
 # Test : with bitfield support
+# TODO: CSL_AG_ENABLE_BITFIELDS_SUPPORT=ON
 set(test_name test_${PROJECT_NAME}_${component_name}_bitfield_support_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_bitfield_support.cpp)
-target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
+target_include_directories(${test_name}
+	PRIVATE
+		# ${CMAKE_SOURCE_DIR}/tests/details/
+		${CMAKE_CURRENT_SOURCE_DIR}/includes
+)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
 target_link_libraries(${test_name}
 	PRIVATE
