--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,70 +1,16 @@
+// TODO: configure/interface recommended extensions and apps: clangd, etc.
 {
-    "C_Cpp.errorSquiggles": "disabled",
-    "debug.terminal.clearBeforeReusing": true,
-    "clang-tidy.buildPath": "./build/",
-    // "clang-tidy.buildPath": "${workspaceFolder}/build"
-    "cmake.generator": "Ninja",
-    "cmake.configureSettings": {
-        "CSL_BUILD_ALL": true,
-        "CSL_ENABLE_ALL_TESTS": true,
-        "CSL_ENABLE_ALL_EXAMPLES": true,
-        "CMAKE_EXPORT_COMPILE_COMMANDS": true,
-        // CSL OPT-INS
-        // TODO(Guss): test matrix
-        "CSL_ENSURE__OPT_IN__IOSTREAM_SUPPORT": true,
-        "CSL_ENSURE__OPT_IN__FMT_SUPPORT": true
+    "terminal.integrated.profiles.linux": {
+        "zsh": {
+            "path": "/usr/bin/zsh"
+        },
+        "bash": {
+            "path": "/usr/bin/bash"
+        }
     },
-    "files.associations": {
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "set": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "numbers": "cpp",
-        "ostream": "cpp",
-        "ranges": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "typeinfo": "cpp",
-        "variant": "cpp",
-        "bitset": "cpp"
-    }
+    "terminal.integrated.defaultProfile.linux": "zsh", 
+    // "C_Cpp.errorSquiggles": "disabled",
+    "debug.terminal.clearBeforeReusing": true,
+    "clang-tidy.buildPath": "./build/"
+    // "clang-tidy.buildPath": "${workspaceFolder}/build"
 }
