[style] #28 - docker embedded toolchain (WIP) - gcc version range

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,6 +3,8 @@
 
 FROM ubuntu:latest
 
+ENV DEBIAN_FRONTEND noninteractive
+
 # Basics / installation prerequisites
 RUN apt update && apt install -y --no-install-recommends \
         gpg-agent debian-keyring \
@@ -12,7 +14,7 @@ RUN apt update && apt install -y --no-install-recommends \
     apt-get update -y && \
     apt install -y \
         sudo tzdata openssh-server curl wget libssl-dev ca-certificates \
-        less tar gzip zip unzip
+        less tar zip unzip gzip
 
 # Remote
 RUN apt install -y --no-install-recommends \
@@ -25,7 +27,20 @@ ENV CLANG_VERSION=16
 ENV GCC_VERSION=13
 
 # GCC
-#   sudo apt install '^gcc\-[[:digit:]]{1,}$'
+#   apt install '^gcc\-[[:digit:]]{1,}$'
+#   apt-cache search --quiet --names-only '^gcc\-[[:digit:]]{1,}$' | grep -oP 'gcc\-\K([[:digit:]]{1,})' | sort -n
+#   apt-cache search --quiet --names-only '^gcc\-[[:digit:]]{1,}$' | grep -oP 'gcc\-\K([[:digit:]]{1,})' | sort -n | xargs -I {} echo "- {} ..."
+
+apt-cache search --quiet --names-only '^gcc\-[[:digit:]]{1,}$' | grep -oP 'gcc\-\K([[:digit:]]{1,})' | sort -n | xargs -I {} \
+    apt install -y gcc-{}
+
+
+# GCC
+ARG gcc_available_versions="apt-cache search --quiet --names-only '^gcc\-[[:digit:]]{1,}$' | grep -oP 'gcc\-\K([[:digit:]]{1,})' | sort -n"
+RUN for gcc_version in `$gcc_available_versions`; do \
+        echo $gcc_version \
+    done
+
 
     apt install -y  build-essential \
                     libc6  libc6-dev libstdc++6 \
@@ -35,6 +50,7 @@ ENV GCC_VERSION=13
 RUN update-alternatives --install /usr/bin/gcc  gcc  /usr/bin/gcc-${GCC_VERSION} 100    \
                         --slave   /usr/bin/g++  g++  /usr/bin/g++-${GCC_VERSION}        \
                         --slave   /usr/bin/gcov gcov /usr/bin/gcov-${GCC_VERSION}
+# GCC: multi arch
 
 # LLVM
 RUN apt install -y wget bash && \
@@ -48,6 +64,9 @@ RUN apt install -y wget bash && \
     --slave /usr/bin/clangd          clangd          /usr/bin/clangd-$CLANG_VERSION          \
     --slave /usr/bin/llvm-symbolizer llvm-symbolizer /usr/bin/llvm-symbolizer-$CLANG_VERSION
 # lld
+
+# large/compiled libraries
+# - https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.gz
 
 # Tooling
 RUN apt upgrade -y && \
@@ -76,3 +95,8 @@ RUN apt update && apt upgrade -y && \
 # Cleanup
 
 # QUESTION: ENV for CI -> gcc latest, clang latest ? or rely on alternative-updates ?
+
+# ---
+# docker compose:
+# - allow mounting sources
+# - allow remote: ssh + rsync connection
