[style] #28 - docker embedded toolchain (WIP)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,10 +9,10 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt update && apt install -y --no-install-recommends \
         gpg-agent debian-keyring \
         software-properties-common apt-utils \
-        lsb-release software-properties-common && \
-    add-apt-repository ppa:ubuntu-toolchain-r/test && \
-    apt-get update -y && \
-    apt install -y \
+        lsb-release software-properties-common \
+    && add-apt-repository ppa:ubuntu-toolchain-r/test \
+    && apt-get update -y \
+    && apt install -y \
         # remote
         openssh-server wget rsync ssh \
         sudo tzdata openssh-server curl libssl-dev ca-certificates \
@@ -26,14 +26,15 @@ RUN apt update && apt install -y --no-install-recommends \
         libboost-all-dev \
         # tools
         doxygen graphviz \
-        emacs nano vim
+        emacs nano vim \
+    && rm -rf /var/lib/apt/lists/*
 
 # vcpkg
-RUN wget -qO vcpkg.tar.gz https://github.com/microsoft/vcpkg/archive/master.tar.gz && \
-    mkdir /opt/vcpkg && \
-    tar xf vcpkg.tar.gz --strip-components=1 -C /opt/vcpkg && \
-    /opt/vcpkg/bootstrap-vcpkg.sh && \
-    ln -s /opt/vcpkg/vcpkg /usr/local/bin/vcpkg
+RUN wget -qO vcpkg.tar.gz https://github.com/microsoft/vcpkg/archive/master.tar.gz \
+    && mkdir /opt/vcpkg \
+    && tar xf vcpkg.tar.gz --strip-components=1 -C /opt/vcpkg \
+    && /opt/vcpkg/bootstrap-vcpkg.sh \
+    && ln -s /opt/vcpkg/vcpkg /usr/local/bin/vcpkg
 
 # Tooling: package managers (vcpkg, conan, build2, etc.)
 # Tooling: static analysis
@@ -41,14 +42,18 @@ RUN wget -qO vcpkg.tar.gz https://github.com/microsoft/vcpkg/archive/master.tar.
 
 # Tooling: shells (bash, zsh, )
 # Tooling: zsh
-RUN apt update && apt upgrade -y && \
-    apt install -y zsh && \
-    yes '' | sh -c "$(wget https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
+RUN apt update && apt upgrade -y \
+    && apt install -y zsh \
+    && yes '' | sh -c "$(wget https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
 # see https://stackoverflow.com/questions/55987337/visual-studio-code-remote-containers-change-shell
 
 # TODO: gdb, lldb
 
 # C++ toolchain
+
+RUN   apt-get install -y --no-install-recommends \
+    libc6  libc6-dev libstdc++6 libc6-arm64-cross
+
 # C++ toolchain: GCC
 
 # simpler alternative: apt install with wildcard
@@ -62,7 +67,6 @@ RUN apt update && apt upgrade -y && \
 #     | sort -n \
 #     | xargs -I {} \
 #     apt install -y gcc-{}
-
 
 # GCC - version are either externaly provided, or all available are selected by default
 ARG gcc_versions
@@ -81,29 +85,20 @@ RUN : {gcc_versions:=$(apt-cache search --quiet --names-only '^g\+\+\-[[:digit:]
                             --slave   /usr/bin/gcov gcov /usr/bin/gcov-{};  \
     '
 
-
-    apt install -y  build-essential \
-                    libc6  libc6-dev libstdc++6 \
-                    gcc-${GCC_VERSION} g++-${GCC_VERSION} \
-                    gdb
-# for each version, use {version} as priority ?
-RUN update-alternatives --install /usr/bin/gcc  gcc  /usr/bin/gcc-${GCC_VERSION} 100    \
-                        --slave   /usr/bin/g++  g++  /usr/bin/g++-${GCC_VERSION}        \
-                        --slave   /usr/bin/gcov gcov /usr/bin/gcov-${GCC_VERSION}
-# GCC: multi arch
-
 # LLVM
 RUN apt install -y wget bash && \
-    wget https://apt.llvm.org/llvm.sh && \  
-    chmod +x llvm.sh && \
-    (yes '' | ./llvm.sh $CLANG_VERSION all) && \
-    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-$CLANG_VERSION 100     \
-    --slave /usr/bin/clang++         clang++         /usr/bin/clang++-$CLANG_VERSION         \
-    --slave /usr/bin/clang-format    clang-format    /usr/bin/clang-format-$CLANG_VERSION    \
-    --slave /usr/bin/clang-tidy      clang-tidy      /usr/bin/clang-tidy-$CLANG_VERSION      \
-    --slave /usr/bin/clangd          clangd          /usr/bin/clangd-$CLANG_VERSION          \
-    --slave /usr/bin/llvm-symbolizer llvm-symbolizer /usr/bin/llvm-symbolizer-$CLANG_VERSION
-# lld
+    && wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add - \
+    && wget https://apt.llvm.org/llvm.sh \  
+    && chmod +x llvm.sh \
+    && (yes '' | ./llvm.sh $CLANG_VERSION all) \
+    && update-alternatives --install /usr/bin/clang clang /usr/bin/clang-$CLANG_VERSION 100      \
+        --slave /usr/bin/clang++         clang++         /usr/bin/clang++-$CLANG_VERSION         \
+        --slave /usr/bin/clang-format    clang-format    /usr/bin/clang-format-$CLANG_VERSION    \
+        --slave /usr/bin/clang-tidy      clang-tidy      /usr/bin/clang-tidy-$CLANG_VERSION      \
+        --slave /usr/bin/clangd          clangd          /usr/bin/clangd-$CLANG_VERSION          \
+        --slave /usr/bin/llvm-symbolizer llvm-symbolizer /usr/bin/llvm-symbolizer-$CLANG_VERSION
+
+# lld, lldb
 
 # large/compiled libraries
 # - https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.gz
